<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.luissoy</groupId>
	<artifactId>historicalprices</artifactId>
	<version>1.0.0</version>
	<name>Historical Prices</name>
	<description>REST API for managing products and their historical prices using Hexagonal Architecture and DDD.</description>
	<properties>
		<java.version>21</java.version>
		<spring.boot.version>3.5.7</spring.boot.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<junit.jupiter.version>5.10.2</junit.jupiter.version>
		<assertj.version>3.26.0</assertj.version>
		<mockito.version>5.12.0</mockito.version>
		<project.version>1.0.0</project.version>
	</properties>

	<packaging>pom</packaging>

	<modules>
		<module>api</module>
		<module>domain</module>
		<module>application</module>
		<module>infrastructure</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
